@@ -1,3 +1,12 @@
+2014-12-01  Cary Coutant  <ccoutant@google.com>
+
+	PR gold/17578
+	* layout.cc (Layout::layout_gnu_stack): Don't warn when -z execstack
+	is given.
+	(Layout::create_executable_stack_info): Warn when -z noexecstack is
+	given but some inputs require executable stack.
+
+
 2010-12-01  Ian Lance Taylor  <iant@google.com>
 
 	* testsuite/icf_virtual_function_folding_test.cc (class Bar): Add
